speaker and wav components

--- a/src/app/audio/audio.component.html
+++ b/src/app/audio/audio.component.html
@@ -1,20 +1,20 @@
 <div>
   <button
-    class="start-button"
+    class="btn btn-primary btn-success"
     *ngIf="!isRecording && !blobUrl"
     (click)="startRecording()"
   >
     Start Recording
   </button>
   <button
-    class="stop-button"
+    class="btn btn-primary btn-danger"
     *ngIf="isRecording && !blobUrl"
     (click)="stopRecording()"
   >
     Stop Recording
   </button>
   <button
-    class="cancel-button"
+    class="btn btn-primary btn-outline-warning"
     *ngIf="!isRecording && blobUrl"
     (click)="clearRecordedData()"
   >
